Project logo upload fixed
